[gd_scene load_steps=16 format=3 uid="uid://c37ki65k2i2d3"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_si80v"]
[ext_resource type="PackedScene" uid="uid://bdupkh0grwy27" path="res://scenes/player/player.tscn" id="2_k30ll"]
[ext_resource type="PackedScene" uid="uid://cwrsikov442nf" path="res://scenes/weapon/ammo_spawner.tscn" id="2_owine"]
[ext_resource type="Environment" uid="uid://8f53d7qpamgm" path="res://resources/materials/night_sky_env1.tres" id="3_ie03h"]
[ext_resource type="Script" path="res://addons/command-terminal/src/CommandTerminal.gd" id="7_eloyy"]
[ext_resource type="PackedScene" uid="uid://b5b8i4p40f5ua" path="res://addons/command-terminal/scn/command_terminal_guts.tscn" id="7_u4tpm"]
[ext_resource type="Script" path="res://scripts/hud/boss_ui_manager.gd" id="7_xlkfv"]
[ext_resource type="FontFile" uid="uid://cmmltma2gsu3a" path="res://addons/command-terminal/ast/windows_command_prompt.ttf" id="8_c55pq"]
[ext_resource type="PackedScene" uid="uid://dyamyev7hajye" path="res://scenes/hud/end_menu.tscn" id="8_up43w"]
[ext_resource type="AudioStream" uid="uid://7plhbwhkredd" path="res://assets/sounds/boss_theme.ogg" id="11_m0ht2"]
[ext_resource type="Script" path="res://addons/post_processing/node/post_process.gd" id="12_3582m"]
[ext_resource type="Script" path="res://addons/post_processing/resource/post_processing_configuration.gd" id="13_cfbl5"]
[ext_resource type="Script" path="res://scripts/restart.gd" id="14_x45bq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nmgc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_24c4b"]
script = ExtResource("13_cfbl5")
reload = false
ASCII = false
ASCIISize = Vector2(4, 9)
ChromaticAberration = true
StrenghtCA = 2.0
Blur = false
L_O_D = 1.0
FishEye = false
FishEyeAspect = 1.0
FishEyeDistortion = 1.0
FishEyeRadius = 1.0
FishEyeAlpha = 1.0
FishEyeCrop = 1.0
FishEyeCropColor = Color(0, 0, 0, 1)
Vignette = true
VignetteIntensity = 1.0
VignetteOpacity = 0.0
VignetteR_G_B = Color(0.411765, 0, 0, 1)
Glitch = false
GlitchRange = 0.05
GlitchNoiseQuality = 250.0
GlitchIntenity = 0.0088
GlitchOffset = 0.03
GlitchColorOffset = 1.3
Outline = false
OutlineColor = Color(0, 0, 0, 1)
OutlineThreshold = 0.0
OutlineBlend = 0.01
Grain = true
GrainPower = 75
CircularWaves = false
CircularWavesAmplitude = 2.0
CircularWavesFrequency = 12.69
CircularWavesRippleRate = 9.2
SpeedLines = false
SpeedLinesColor = Color(1, 1, 1, 1)
SpeedLinesCount = 2
SpeedLineDensity = 0.072
SpeedLineSpeed = 20
ColorCorrection = false
ColorCorrectionTint = Color(0, 0, 0, 1)
ColorCorrectionBrightness = 0.0
ColorCorrectionSaturation = 0.0
Palette = false
Pixelate = true
PixelatePixelSize = 2
CRT = false
overlay = false
scanlines_opacity = 0.4
scanlines_width = 0.25
grille_opacity = 0.3
pixelate = true
roll_speed = 8.0
roll_size = 15.0
roll_variation = 1.8
distort_intensity = 0.05
noise_opacity = 0.4
noise_speed = 5.0
static_noise_intensity = 0.06
aberration = 0.03
brightness = 1.4
discolor = true
warp_amount = 1.0
clip_warp = false
vignette_intensity = 0.4
vignette_opacity = 0.5
AnalogMonitor = false
AnalogMonitorResolution = Vector2(256, 256)
ScreenShake = false
ScreenShakePower = 0.1

[node name="Level" type="Node3D"]
script = ExtResource("1_si80v")

[node name="PumpkinSpawner" parent="." instance=ExtResource("2_owine")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_ie03h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.731723, 0.681603, 0, -0.681603, 0.731723, 0, 9.75889, 0)

[node name="Player" parent="." instance=ExtResource("2_k30ll")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BossUIManager" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -266.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("7_xlkfv")

[node name="EndMenu" parent="UI" instance=ExtResource("8_up43w")]
visible = false
layout_mode = 1

[node name="CommandTerminal" type="Control" parent="UI"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_eloyy")
font = ExtResource("8_c55pq")
font_size = 50

[node name="__guts__" parent="UI/CommandTerminal" instance=ExtResource("7_u4tpm")]
layout_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3nmgc")

[node name="Theme" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_m0ht2")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="PostProcess" type="CanvasLayer" parent="." groups=["post_process"]]
visible = false
script = ExtResource("12_3582m")
configuration = SubResource("Resource_24c4b")

[node name="Restart" type="Node" parent="."]
process_mode = 2
script = ExtResource("14_x45bq")
